gccida/g0/output_quoted_string
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_quoted_string/src/toplev.c:2218:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)c] & 0x10) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_quoted_string/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_quoted_string/src/obj/toplev.o] Error 1
